@@ -15,7 +15,6 @@ import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -28,8 +27,8 @@ public class SwaggerConfig extends WebMvcConfigurationSupport {
                 .apis(RequestHandlerSelectors.basePackage("example.mybatis.blog"))
                 .paths(PathSelectors.any())
                 .build()
-                .securityContexts(Arrays.asList(securityContext())).pathMapping("/")
-                .securitySchemes(Arrays.asList(apiKey())).useDefaultResponseMessages(false);
+                .securityContexts(List.of(securityContext())).pathMapping("/")
+                .securitySchemes(List.of(apiKey())).useDefaultResponseMessages(false);
     }
 
     private ApiInfo apiInfo() {
@@ -51,7 +50,7 @@ public class SwaggerConfig extends WebMvcConfigurationSupport {
         AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
         AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
         authorizationScopes[0] = authorizationScope;
-        return Arrays.asList(new SecurityReference("JWT", authorizationScopes));
+        return List.of(new SecurityReference("JWT", authorizationScopes));
     }
 
     @Override
